# minecraft_shader_interface

./: .gitignore  Cargo.toml
gl_builtin/: builtin_constant.glsl  builtin_uniform.glsl  common_builtin_varyings.glsl  fragment_builtin_varyings.glsl  vertex_old_gl_compat.glsl  vertex_shader_builtin_attributes.glsl
optifine_builtin/: McRenderStageDefine.h
src/: attribute_varying_transformer.rs  directive_rewrite.rs  embedded_rename.rs  fragment_embedded_variables.glsl  function_rename.rs  lib.rs  old_gl_compat.glsl  optifine_standard_macros.rs  render_stage.rs  shader_parameter.rs  test_attribute.glsl  uniform_name_conversion.rs  uniforms.glsl  uniforms.rs
