[package]
name = "minecraft_shader_interface"
version = "0.1.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip="0.5"
shaderc = "0.7"
rspirv-reflect="0.3"
glsl="6.0"
regex="1"
